SAK-50093 SCORM upgrade to Wicket 9 (#12601)